--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.1",
   "manifest_version": 2,
   "browser_action": {
-    "default_popup": "index.html",
+    "default_popup": "popup/popup.html",
     "default_icon": "img/logo.png"
   },
   "icons":
