--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
     "48": "img/logo.png",
     "128": "img/logo.png"
   },
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "content_scripts": [
     {
       "matches": ["https://www.baidu.com/*", "http://www.baidu.com/*"],
