--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/chrome": "0.0.122",
     "@types/jquery": "^3.5.0",
+    "axios": "^0.21.1",
     "vue": "^2.6.11"
   }
 }
